FIX: white-space: pre-wrap prevents collapsing spaces in document-text-element
Without it is impossible to select whole text in a document-text-element
that starts with one space (because of offset == 1 on selection.api)

--- a/modules/documentCanvas/nodes.less
+++ b/modules/documentCanvas/nodes.less
@@ -3,6 +3,7 @@
     display: inline;
     margin: 0 1px;
     border: 1px solid white;
+    white-space: pre-wrap;
 }
 
 [wlxml-tag] {
